k8s/networktest/curl-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-test
spec:
  containers:
  - name: alpine
    image: alpine
    command:
    - "sh"
    - "-c"
    - "apk add --update curl && curl -s google.ca && echo"
