k8s/networktest/git-clone-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-alpine-github
  namespace: default
spec:
  containers:
  - name: alpine
    image: alpine:3.12
    command: ["sleep", "36000"]
